--- a/tutorials/advanced.html
+++ b/tutorials/advanced.html
@@ -210,9 +210,10 @@ img_data &lt;- parse_annotations(results)
 vision_results &lt;- img_data$labels
 
 #save the outputs
-write.csv(vision_results, &quot;.\\data\\gvision_example.csv&quot;)</code></pre>
+write.csv(vision_results, &quot;.\\data\\vision_results.csv&quot;)</code></pre>
 <p>Lets read what this would have created.</p>
-<pre class="r"><code>vision_results &lt;- read.csv(&quot;~\\code\\iale_workshop\\data\\gvision_example.csv&quot;)
+<pre class="r"><code>#again reading this wont translate to everyones machine so we might need to read this in manually.
+vision_results &lt;- read.csv(&quot;~\\code\\iale_workshop\\data\\vision_results.csv&quot;)
 
 head(vision_results)</code></pre>
 <pre><code>##   X        mid       description     score topicality
@@ -306,11 +307,11 @@ p_load_gh(&quot;ropensci/photosearcher&quot;)</code></pre>
 <p>You may have noticed, not only do these dictionaries have different methods of measuring sentiment, they also have a different number of categorized words. This makes each dictionary good for different purposes. It has been demonstrated that AFINN is a good dictionary for evaluating social media data, so lets focus on that for now.</p>
 <div id="afinn-and-flickr-text" class="section level3">
 <h3>AFINN and Flickr text</h3>
-<p>Lets get some Flickr data.</p>
+<p>Lets get some Flickr data. Feel free to change the word mountains to anything you are interested in!</p>
 <pre class="r"><code>flickr_text &lt;- photo_search(text = &quot;mountain&quot;,
                             mindate_taken = &quot;2022-01-01&quot;,
                             maxdate_taken = &quot;2022-01-08&quot;)</code></pre>
-<p>Now lets mergre all the text associated with the post (title, tags and description) into a single column. As the Flickr data is messy and contains lots of missing data we first create our own unique function called <code>paste2()</code>. For now lets not worry about the details of this function, but by doing <code>paste2 &lt;- function(){}</code> we are telling R to create a new function called <code>paste2()</code> that carries out any code in the <code>{}</code> on the data defined in the <code>()</code>. To create a new column we can just use the <code>$</code> followed by a name of a column that doesn’t alread exist, and then tell R what to place in this column</p>
+<p>Now lets merge all the text associated with the post (title, tags and description) into a single column. As the Flickr data is messy and contains lots of missing data we first create our own unique function called <code>paste2()</code>. For now lets not worry about the details of this function, but by doing <code>paste2 &lt;- function(){}</code> we are telling R to create a new function called <code>paste2()</code> that carries out any code in the <code>{}</code> on the data defined in the <code>()</code>. To create a new column we can just use the <code>$</code> followed by a name of a column that doesn’t already exist, and then tell R what to place in this column</p>
 <pre class="r"><code>#function to paste without copying NAs
 paste2 &lt;- function(...,sep=&quot;, &quot;) {
   L &lt;- list(...)
@@ -330,9 +331,9 @@ head(flickr_text$text)</code></pre>
 <pre><code>## [1] &quot;First Light, After tons of contemplating and a four hour boring drive through the desert in the night, I made it to Manzanar on time for the first sunrise of the year 2022. The temperature was below freezing but thanks to the weather gods, it was clear morning. I felt so joyful watching and photographing the peaks glow in red as the first light arrived. \n\nBut not everything is joyful about the place. Manzanar is the site of one of ten American concentration camps, where more than 120,000 Japanese Americans were incarcerated during World War II from March 1942 to November 1945. It is located at the foot of the Sierra Nevada mountains in California&#39;s Owens Valley., manzanar historic sierranevada firstlight sunrise glow mountains mountwilliamson owensvalley memorial japan worldwar landscape winter snow mountainrange morning outdoors travel inyo california usa&quot;
 ## [2] &quot;Schafreuter, New Years Hiking, schafreuter alps bayern austria österreich winter snow mountains sunrise cold hiking walking wandern&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 ## [3] &quot;Schafreuter, New Years Hiking, schafreuter alps bayern austria österreich winter snow mountains sunrise cold hiking walking wandern&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
-## [4] &quot;Schafreuter, New Years Hiking, schafreuter alps bayern austria österreich winter snow mountains sunrise cold hiking walking wandern&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
-## [5] &quot;Pizzo dell uomo, i think the pizzo columbe to the left is more exciting but here the mountain with the dark forest in the foreground really shines , mountain snow morning mood berge schweiz schnee switzerland&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
-## [6] &quot;Pizzo de Sole, it was new year&#39;s night. New moon so perfect for taking pictures I waited for sunrise. Just beautiful how the clouds have already been irradiated. , mountain snow morning mood berge schweiz schnee switzerland&quot;</code></pre>
+## [4] &quot;Pizzo dell uomo, i think the pizzo columbe to the left is more exciting but here the mountain with the dark forest in the foreground really shines , mountain snow morning mood berge schweiz schnee switzerland&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+## [5] &quot;Pizzo de Sole, it was new year&#39;s night. New moon so perfect for taking pictures I waited for sunrise. Just beautiful how the clouds have already been irradiated. , mountain snow morning mood berge schweiz schnee switzerland&quot;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
+## [6] &quot;pizzo Columbe, One of my favorite peaks i am amazed by the silhouette it is a small part of dolomite in switzerland. I had photographed through the night. Then I changed my location again in the morning to capture the mood of the morning. , mountain snow morning mood berge schweiz schnee switzerland&quot;</code></pre>
 <p>Finally, we need to use the AFINN dictionary to assess the sentiment of each word in the new ‘text’ column.</p>
 <p>The easiest way to do this is separate each piece of text into the individual words on a new row.</p>
 <pre class="r"><code>#unnest words - one row per word
@@ -343,12 +344,12 @@ head(flickr_text$word)</code></pre>
 <pre><code>## [1] &quot;first&quot;         &quot;light&quot;         &quot;after&quot;         &quot;tons&quot;         
 ## [5] &quot;of&quot;            &quot;contemplating&quot;</code></pre>
 <p>Next we add the dictionary sentiment value as a new row next to it. As both our data and the AFINN dictionary have a column called ‘word’ we can match our words to the values in the dictionary. This is achieved through the <code>inner_join(get_sentiments(&quot;afinn&quot;)</code>. We then need to sum all the values for each individual photograph back up.This is achieved by the following lines of code: <code>group_by(url_l) %&gt;% summarise(sentiment = sum(value))</code></p>
-<p>In these parts of the code we are using <code>%&gt;%</code> to tell R to remeber the first piece of data and apply the following functions to it in a step-by-step way. This is a bit complicated but all covered in a short amount of code, so please ask for clarification if needed!</p>
-<pre class="r"><code>#df of sum sentiment per photo 
+<p>In these parts of the code we are using <code>%&gt;%</code> to tell R to remember the first piece of data and apply the following functions to it in a step-by-step way. This is a bit complicated but all covered in a short amount of code, so please ask for clarification if needed!</p>
+<pre class="r"><code>#data frame of sum sentiment per photo 
 afinn &lt;- flickr_text %&gt;% #select our data
   inner_join(get_sentiments(&quot;afinn&quot;)) %&gt;% #add the afinn values as a new column
-  group_by(url_l) %&gt;%
-  summarise(sentiment = sum(value))</code></pre>
+  group_by(url_l) %&gt;% #tell R to treat each unique url as a group
+  summarise(sentiment = sum(value)) #sum the sentiment value of that group</code></pre>
 <pre><code>## Joining, by = &quot;word&quot;</code></pre>
 <pre class="r"><code>head(afinn)</code></pre>
 <pre><code>## # A tibble: 6 x 2
@@ -356,12 +357,46 @@ afinn &lt;- flickr_text %&gt;% #select our data
 ##   &lt;chr&gt;                                                                &lt;dbl&gt;
 ## 1 https://live.staticflickr.com/31337/51797354394_c2f774085e_b.jpg        -5
 ## 2 https://live.staticflickr.com/65535/51791073232_b6d116c8e2_b.jpg         2
-## 3 https://live.staticflickr.com/65535/51791579541_c0a5c3eca1_b.jpg         3
-## 4 https://live.staticflickr.com/65535/51791879422_820988138a_b.jpg         4
-## 5 https://live.staticflickr.com/65535/51792305486_b58d6fac45_b.jpg         1
-## 6 https://live.staticflickr.com/65535/51792737097_ca2c686e6c_b.jpg        -3</code></pre>
+## 3 https://live.staticflickr.com/65535/51791075322_f9e0521454_b.jpg         2
+## 4 https://live.staticflickr.com/65535/51791579541_c0a5c3eca1_b.jpg         3
+## 5 https://live.staticflickr.com/65535/51791879422_820988138a_b.jpg         4
+## 6 https://live.staticflickr.com/65535/51792305486_b58d6fac45_b.jpg         1</code></pre>
 <p>And there we have it, a summaries of the expressed sentiment for each photograph uploaded of a mountain in the first week of January. We can combine this with the spatial element or combine it with the image contents to assess the drivers of these sentiments.</p>
 </div>
+</div>
+<div id="challenge-3-find-the-sentiment-of-whatever-you-want" class="section level2">
+<h2>Challenge 3: Find the sentiment of whatever you want!</h2>
+<p>Now you have some time to put all your new skills together. Edit the example code to find the sentiment of posts about whatever images you want!</p>
+<pre class="r"><code>flickr_text &lt;- photo_search(text = &quot;&quot;, #edit this section
+                            mindate_taken = &quot;&quot;,
+                            maxdate_taken = &quot;&quot;) #could add a bbox of shapefile as well
+
+#function to paste without copying NAs
+paste2 &lt;- function(...,sep=&quot;, &quot;) {
+  L &lt;- list(...)
+  L &lt;- lapply(L,function(x) {x[is.na(x)] &lt;- &quot;&quot;; x})
+  gsub(paste0(&quot;(^&quot;,sep,&quot;|&quot;,sep,&quot;$)&quot;),&quot;&quot;,
+       gsub(paste0(sep,sep),sep,
+            do.call(paste,c(L,list(sep=sep)))))
+}
+
+#here we create a new column called text and paste in all the other text from that row
+flickr_text$text &lt;- paste2(flickr_text$title, 
+                           flickr_text$description, 
+                           flickr_text$tags) 
+
+#unnest words - one row per word
+flickr_text &lt;- flickr_text %&gt;%
+  unnest_tokens(word, text) #creates col called word which matches afinn dictionary
+
+#data frame of sum sentiment per photo 
+afinn &lt;- flickr_text %&gt;% #select our data
+  inner_join(get_sentiments(&quot;afinn&quot;)) %&gt;% #add the afinn values as a new column
+  group_by(url_l) %&gt;% #tell R to treat each unique url as a group
+  summarise(sentiment = sum(value)) #sum the sentiment value of that group
+
+#Inspect the results
+head(afinn)</code></pre>
 </div>
 
 
